# Mantra-Bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
.github/: CODEOWNERS  FUNDING.yml  auto-assign.yml
.github/workflows/: auto-assign.yml  isort.yml
mantra/: __init__.py  __main__.py
mantra/api/: animals.py  urban.py
mantra/assets/: banner.txt
mantra/cache/: reddit.py
mantra/config/: __init__.py  bot_config.py  database.py  reddit_config.py
mantra/core/: bot.py  models.py  tortoise_config.py
mantra/core/plugins/: errors.py
mantra/core/plugins/Animals/: animals.py
mantra/core/plugins/Fun/: animals.py  fun.py  reddit.py
mantra/core/plugins/Internal/: __init__.py  admin.py  owner.py
mantra/core/plugins/Misc/: __init__.py  info.py  utils.py
mantra/core/plugins/Utilities/: __init__.py  starboard.py  tickets.py
mantra/core/utils/: __init__.py  buttons.py  colors.py  emojis.py  errors.py  eval_helpers.py  pagination.py  time.py
