[tool.poetry]
name = "mantra bot"
version = "0.1.0a"
description = "A Powerful and Easy to use Discord bot 🤖"
authors = ["Nishant Sapkota <snishant306@gmail.com>", "Stuti Upreti <stutiupreti12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
hikari = "^2.0.0.dev111"
hikari-lightbulb = "^2.2.4"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
